[metadata]
name = caenlogger
version = attr: caenlogger.version.__version__
author = xaratustrah
url = https://github.com/xaratustrah/caenlogger
description = A logger for the caen module
long_description = file: README.md
long_description_content_type = text/markdown
keywords = Physics, Engineering
license = GPLv3
license_files = LICENSE
classifiers =
    Environment :: Console
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Topic :: Scientific/Engineering :: Physics
    Intended Audience :: Science/Research

[options]
python_requires = >=3.6, <4
packages = find:

[options.entry_points]
console_scripts =
    caenlogger = caenlogger.__main__:main
